# physics-question-kb

./: .env.example  .gitignore  CLAUDE.md  STATUS.md  agent_test.txt  main.py  pyproject.toml
data/: agent_state.json  coverage_report.json
data/questions/: 0019a989-c319-4001-a974-654916f09447.json  0037407c-b16d-40ad-ab20-8663d772be6a.json  00443339-e833-40bf-801e-3ad470b6b108.json  00627214-21dd-4f22-8828-3adb5e5ff477.json  0069bc5c-7fb7-4a66-992b-50e5f009d2ff.json  00701393-b4ac-460d-b999-7496912da8a9.json  00a1de86-6690-4209-8a3a-4fc3ead0d2e7.json  00a60e85-644c-42d2-89ad-0243101cbbe4.json  00a7109f-0ed8-4f98-98a7-2abeeae21972.json  00aae42f-ce56-4ebe-ab04-555caa178fb4.json  00ad1635-439e-477f-a322-75f7c541e319.json  00adb1c0-2f52-4d5c-9011-fa3b2097682b.json  00b7fd88-a1c6-4b64-907d-67a4ced3d146.json  00ba8ba6-2dcf-4a60-b077-092aa24e911a.json  00c99813-dc63-417c-94bf-3f0fded461ab.json  00cf011b-a3f1-4741-8339-d9907633133b.json  00d11ac9-9cfd-4679-a5c2-ea12c12578da.json  (+3420 more)
scripts/: bulk_generate.py  gen_batch_session13.py  gen_questions.py  gen_session15.py  gen_session16.py  gen_session17.py  gen_session29.py  gen_session30.py  gen_session31.py  gen_session33.py  gen_session33b.py  gen_topup_session13.py  generate_batch.py  generate_questions.py  generate_questions2.py  generate_questions3.py  generate_session24.py  generate_session24b.py  generate_session7.py  rebuild_db.py  topup_session7.py  topup_sources.py
src/: classifier.py  config.py  db.py  deduplicator.py  models.py  storage.py  taxonomy.py
src/agent/: loop.py  (+2 more)
tests/: conftest.py  test_scraper_base.py
(+13 files in other folders)
