[project]
name = "physics-kb"
version = "0.1.0"
description = "Autonomous KS3 Physics question knowledge base builder"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.50.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.0.0",
    "boto3>=1.34.0",
    "rich>=13.0.0",
    "click>=8.1.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
]

[project.scripts]
physics-q = "src.cli.query:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
